--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,18 @@ language: android
 
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    - platform-tools
-    - tools
-
     # The BuildTools version used by your project
     - build-tools-23.0.2
 
     # The SDK version used to compile your project
     - android-23
-    - extra-android-m2repository
-    - extra-android-support
 
   before_install:
     - chmod +x gradlew
+
+  before_script:
+    - chmod +x grailsw
+
+
+
+
