--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ android:
     # The SDK version used to compile your project
     - android-23
 
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
   before_install:
     - chmod +x gradlew
 
