--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ jdk:
 
 android:
   components:
-    # The BuildTools version used by your project
-    - build-tools-23.0.2
+    - platform-tools
+    - tools
 
-    # The SDK version used to compile your project
-    - android-23
+    #- build-tools-23.0.2
+    #- android-23
 
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
@@ -18,8 +18,8 @@ android:
   before_install:
     - chmod +x gradlew
 
-  before_script:
-    - chmod +x grailsw
+  script:
+    - ./gradlew build connectedCheck
 
 
 
