--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,14 @@ android:
     - platform-tools
     - tools
 
-    #- build-tools-23.0.2
-    #- android-23
+    - build-tools-23.0.2
+    - android-23
+
+  Additional components:
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-19
 
   licenses:
     - 'android-sdk-preview-license-52d11cd2'
