--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ android:
   before_install:
     - chmod +x gradlew
 
+  before_script:
+  # Create and start emulator
+  - echo y | android update sdk --no-ui --filter build-tools-23.0.2,android-23,extra-android-m2repository
+
   script:
     - ./gradlew build connectedCheck
 
